# observability-playground

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  taskfile.yml
config/: alert.rules.yml  alertmanager.yml  prometheus.yml
docs/: alerts.md  metrics.md  quering.md  visualization.md
src/: db_enum.py  enum_types.py  event_enum.py  gauge_metrics.py  histogram_metrics.py  pc_counter_metrics.py  pg_counter_metrics.py
